# coding-tool-reasoning

./: .coveragerc  .flake8  .gitignore  Dockerfile  README.md  available_models.yaml  cc_chapters.txt  cc_extract.txt  cc_extract2.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_config.example.yaml  swe_mcp_config.yaml
.github/: ISSUE_TEMPLATE_multi_metric_analyzer.md
.github/workflows/: cd.yml  ci.yml
data/subjects/: experiment_runs.csv  subject_data.csv
docker/localai/: Dockerfile
docs/: CRONOGRAMA_EXECUCAO.md  CRONOGRAMA_EXECUCAO_v2.aux  CRONOGRAMA_EXECUCAO_v2.fdb_latexmk  CRONOGRAMA_EXECUCAO_v2.fls  CRONOGRAMA_EXECUCAO_v2.md  CRONOGRAMA_EXECUCAO_v2.out  CRONOGRAMA_EXECUCAO_v2.tex  CRONOGRAMA_TEXTO_CORRIDO.md  CRONOGRAMA_TEXTO_CORRIDO_v2.aux  CRONOGRAMA_TEXTO_CORRIDO_v2.md  CRONOGRAMA_TEXTO_CORRIDO_v2.tex  DESIGN_DE_PESQUISA.md  FUNDAMENTACAO_TEORICA.md  MATERIAIS_E_METODOS.md  PROPOSAL.md  REFERENCIAS.md  SLR_INTEGRATION_SUMMARY.md  timeline.md
docs/architecture/: agent-execution-data-flow.md  basic-user-interaction-sequence.puml  component-interactions.puml  domain-uml.puml  knowledge-base-loading.puml  services-layer-connections.puml
docs/experiments/: controlled-experiment-protocol.md  experiment-design.md
docs/requirements/: metrics-future.md  metrics.md  requirements.md  roadmap.md
docs/risks/: avoiding-ontologies.md  design-science-framing.md  experiment-data-privacy.md  risk-register.md  rq-scope-falsifiability.md
ontologies/: ontology_entities.csv
scripts/: check_import_health.py  create_github_issue.ps1  lint_import_consistency.py  run_openssl_issue_mcp_experiment.py
setup/: setup.ps1  setup.sh  start_docker_localai.ps1  start_docker_localai.sh
src/: main.py  swe_mcp_server.py
tests/: test_circuit_breaker.py  test_reliability_patterns.py
(+314 files in other folders)
