[tool.poetry]
name = "coding-tool-reasoning"
version = "0.1.0"
description = "A short description of my awesome package."
authors = ["Andrey Justo <andrey.justo@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["python", "packaging", "example"]
package-mode = false

[tool.poetry.dependencies]
azure-identity = "1.25.1"
bert-score = "0.3.13"
logging = "0.4.9.6"
matplotlib = "3.10.7"
networkx = "3.6"
numpy = "^2.2.6"
openai = "2.8.1"
python = "<3.14,>=3.11"
pyyaml = "6.0.3"
requests = "^2.28.1"
torch = "2.6.0" # Review versioning
mcp = "^1.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.0"
pytest-asyncio = "1.3.0"
pytest-cov = "^7.0.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"